--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
   <link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@3/dark.css" rel="stylesheet">
+  <meta name="google-signin-client_id" content="37897594321-phtiofsekchjjoq3iao7vn4l5hh9k44e.apps.googleusercontent.com">
   <title>Todos App</title>
 </head>
 <body>
@@ -71,6 +72,8 @@
               <input type="password" class="form-control" id="passwordLogin">
             </div>
             <button type="submit" class="btn btn-primary">Signin</button>
+            <p>OR</p>
+            <div class="g-signin2" data-onsuccess="onSignIn"></div>
           </form>
           <p>Don't have an account ?<a class="btn btn-outline-info" id="signupForm">Signup here</a></p>
         </div>
@@ -110,7 +113,7 @@
         <input type="text" class="form-control" id="description">
       </div>
       <div class="form-group">
-        <label for="status">Description</label>
+        <label for="status">Status</label>
         <select class="custom-select" id="status">
           <option selected disabled>Select Status</option>
           <option>Incomplete</option>
@@ -139,7 +142,7 @@
         <input type="text" class="form-control" id="descriptionUpdate">
       </div>
       <div class="form-group">
-        <label for="status">Description</label>
+        <label for="status">Status</label>
         <select class="custom-select" id="statusUpdate">
           <option selected disabled>Select Status</option>
           <option>Incomplete</option>
@@ -158,6 +161,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> -->
 <script src="./assets/js/jquery.js"></script>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 <script src="./assets/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 <script src="./assets/js/main.js"></script>
