add feature github sign in

--- a/client/index.html
+++ b/client/index.html
@@ -74,13 +74,14 @@
             <button type="submit" class="btn btn-primary">Signin</button>
             <p>OR</p>
             <div class="g-signin2" data-onsuccess="onSignIn"></div>
+            <button type="button" class="btn btn-dark mt-2" id="signWithGithub">Signin With Github</button>
           </form>
           <p>Don't have an account ?<a class="btn btn-outline-info" id="signupForm">Signup here</a></p>
         </div>
       </div>
     </div>
   
-    <div id="home" class="todos">
+    <div id="home" class="todos" style="max-height: 90vh; overflow: auto;">
       <table class="table table-hover">
         <thead>
           <tr>
